
	Added custom views, which contrary to regular views can contain files that
	do not belong to the same directory.

	Added b key to menu mode that creates custom view filled with menu items
	filtering out those that are not paths.

	Allowed having multiple file viewers with same rules for choosing them at
	run-time as for file associations.  Thanks to filterfalse.

	Made calculation of directory size visible in :jobs menu.

	Made tests less dependent on environment.  Thanks to Hendrik Jaeger (a.k.a.
	henk).

	Removed unnecessary command existence checks from vifm.vim.  Thanks to
	filterfalse.

	Auto-resize position field on the status bar to fit the text.  Thanks to
	ranousse.

	Switch to utf-8 internal representation of paths on Windows.  This fixes
	issues when file name encoding doesn't match system encoding.  Thanks to
	Stas Panteleev.

	Made leaving wrong (unexpectedly removed) directory more robust.  Thanks
	to willemw12.

	Significantly reduced amount of work performed by Vifm is idle.  Thanks to
	hofheinz.

	Made message dialogs interact better with everything else on the screen.
	E.g. redraw properly after terminal resize.

	United last pattern of :substitute command with search history.  Thanks to
	filterfalse.

	Made configure script lookup curs_set in libtinfo.

	Fixed search messages in menus (nth time...).

	Fixed automatic finishing in some situation when no terminal is available.
	Thanks to tYGjQCsvVI.

	Fixed crash on navigation to end of line in command-line mode.  Thanks to
	Christian Fillion (a.k.a. cfillion).

	Fixed quite rare UI glitch right after updating 'classify'.

	Fixed UI glitch related to considering 'classify' option for ".." entry in
	directories without files.

	Fixed 'lsview' layout calculation for non-ascii names, which used too much
	space.

	Fixed 'lsview' entry highlight minor glitch related to symbolic links to
	directories.

	Fixed `:help` (no arguments) when 'vimhelp' is on and automatically